# warehouse-traffic-sim

./: .gitignore  Cargo.toml
src/: constants.rs  lib.rs  main.rs
src/components/: mission.rs  mod.rs  robot.rs
src/core/: grid.rs  highways.rs  mod.rs  spacetime.rs  types.rs  zones.rs
src/plugins/: mod.rs  navigation.rs  warehouse.rs
src/systems/: mod.rs  navigation.rs  pbs.rs  spawner.rs  ui.rs  visualization.rs
