[package]
name = "warehouse_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.3"
rustc-hash = "2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"